force-app/main/default/objects/Account/fields/Accept_Overshipments__c.field-meta.xml
<CustomField>
    <fullName>Accept_Overshipments__c</fullName>
    <description>Will be fed in from Customer Onboarding Form</description>
    <label>Accept Overshipments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>