force-app/main/default/objects/Account/fields/Account_ActionCd__c.field-meta.xml
<CustomField>
    <fullName>Account_ActionCd__c</fullName>
    <description>This is for the Unify National Account feed.</description>
    <label>Account ActionCd</label>
    <length>10</length>
    <type>Text</type>
</CustomField>