force-app/main/default/objects/Account/fields/Account_Diagnostic_Automation__c.field-meta.xml
<CustomField>
    <fullName>Account_Diagnostic_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PR-00709: Invokes &apos;Account - Account Diagnostic Automation&apos; Flow to assign a Task and create a Notification</description>
    <label>Account Diagnostic Automation</label>
    <type>Checkbox</type>
</CustomField>