force-app/main/default/objects/Account/fields/Account_DW_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_DW_Key__c</fullName>
    <description>Key use by DW to load and update Customer Accounts</description>
    <externalId>true</externalId>
    <label>Account DW Key</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>