force-app/main/default/objects/Account/fields/Account_Manager_Backup__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Backup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager Backup</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipLabel>Accounts (Account Manager Backup)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>