force-app/main/default/objects/Account/fields/Account_Owner_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Country__c</fullName>
    <formula>Owner.Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Country</label>
    <type>Text</type>
</CustomField>