force-app/main/default/objects/Account/fields/Account_Profile_Flag__c.field-meta.xml
<CustomField>
    <fullName>Account_Profile_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caheck to make sure Account profiles is created or not on this Account.</description>
    <label>Account Profile Flag</label>
    <type>Checkbox</type>
</CustomField>