force-app/main/default/objects/Account/fields/Account_Reassignment_Stage__c.field-meta.xml
<CustomField>
    <fullName>Account_Reassignment_Stage__c</fullName>
    <description>Updated by Process Builder.  If there is a reassignment record on the account in &quot;current Rep 90 Day Review&quot;, &quot;New Rep in 180 day review&quot; or &quot;observation complete, stay with rep&quot;, copy that stage onto Account</description>
    <label>Account Reassignment Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>