force-app/main/default/objects/Account/fields/Account_Reassignment_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Account_Reassignment_Yes_No__c</fullName>
    <description>Account Reassignment Flag.</description>
    <formula>If(or(Account_Reassignment_Stage__c = &quot;Current Rep - 90 Day Observation&quot;,Account_Reassignment_Stage__c=&quot;New Rep - In 180-Day Review&quot;),&quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Reassignment flag.  Yes if the Account Reassignment Stage is either &quot;Current Rep in 90 Day Observation&quot; or &quot;New Rep in 180 Day Observation&quot;).</inlineHelpText>
    <label>Account Reassignment Yes/No</label>
    <type>Text</type>
</CustomField>