force-app/main/default/objects/Account/fields/Account_Record_Type_Copy__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_Copy__c</fullName>
    <description>Needed for Brainshark Sales Accelerator to match Account Record Type field value in the Account object to the same field in Brainshark. 
Brainshark Sales Accelerator functionality doesn&apos;t allow the mapping to &quot;Record Type&quot; fields types.</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account_Record_Type_Copy</label>
    <type>Text</type>
</CustomField>