force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>IF( ISPICKVAL( Active__c , &quot;Yes&quot;) , IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001AxOs&quot;, &quot;This Account is Active&quot;),                                          

IF( ISPICKVAL( Active__c , &quot;No&quot;) , IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001AxOx&quot;, &quot;This Account is Inactive&quot;),NULL) 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>