force-app/main/default/objects/Account/fields/Account_SysDivBillTo__c.field-meta.xml
<CustomField>
    <fullName>Account_SysDivBillTo__c</fullName>
    <description>Used by Zilliant to pass parameters to reports. Converts 03 to SW.</description>
    <formula>if(Legacy_System_Cd__c=&quot;03&quot;, 
&quot;SW&quot;&amp; Legacy_Division_Cd__c&amp;AccountNumber, 
Legacy_System_Cd__c&amp; Legacy_Division_Cd__c&amp;AccountNumber)</formula>
    <label>Account SysDivBillTo</label>
    <type>Text</type>
</CustomField>