force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Text value of the record type for use on the AccountLeadSearch page</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Record type</inlineHelpText>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>