force-app/main/default/objects/Account/fields/Account_Type_Code_Definition__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_Code_Definition__c</fullName>
    <description>For use with Unify NA feed</description>
    <label>Account Type Code Definition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>