force-app/main/default/objects/Account/fields/Account_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Account_Vertical__c</fullName>
    <description>Limit verticals to 30 characters only

Any changes/additions here should also be made on Lead object, field Vertical, Vertical object and Brainshark
Must also add a Vertical record (to the Vertical object)

****If the values:  PRINTER - WEB or PRINTER - DIGITAL/WIDE FORMAT are ever changed, contact Heather Sagan immediately!!!  Any changes will impact call routing in the LA CSC!!!****</description>
    <inlineHelpText>Select the vertical that best suits this account.</inlineHelpText>
    <label>Sub Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vertical_Grouping__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Assisted Living</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Bakery &amp; Snack</fullName>
            </value>
            <value>
                <fullName>Beverage</fullName>
            </value>
            <value>
                <fullName>Big Box</fullName>
            </value>
            <value>
                <fullName>BSC</fullName>
            </value>
            <value>
                <fullName>Building Materials</fullName>
            </value>
            <value>
                <fullName>Candy</fullName>
            </value>
            <value>
                <fullName>Cereal &amp; Grain</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Computer &amp; Electronics</fullName>
            </value>
            <value>
                <fullName>Correctional</fullName>
            </value>
            <value>
                <fullName>Cruise Lines</fullName>
            </value>
            <value>
                <fullName>C-Stores</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Eating &amp; Drinking</fullName>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
            <value>
                <fullName>Electronic Shopping</fullName>
            </value>
            <value>
                <fullName>Energy &amp; Mining</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>Grocery Stores</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Higher Ed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>