force-app/main/default/objects/Account/fields/AccountCounter__c.field-meta.xml
<CustomField>
    <fullName>AccountCounter__c</fullName>
    <description>Power of one field for Account</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>