force-app/main/default/objects/Account/fields/Accounts_Alias__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Alias__c</fullName>
    <description>Named by Rep before Credit</description>
    <label>Accounts Alias</label>
    <length>100</length>
    <type>Text</type>
</CustomField>