force-app/main/default/objects/Account/fields/Acct_Status__c.field-meta.xml
<CustomField>
    <fullName>Acct_Status__c</fullName>
    <description>Returns either the Status if the account is a Prospect of the Account Status if the account is a Customer. This is for use on the account and lead search lightning component</description>
    <formula>IF( RecordType.Name =&quot;Prospect&quot;, TEXT( Prospect_Type__c ) , IF( ISPICKVAL( Active__c , &quot;Yes&quot;) ,  &quot;This Account is Active&quot;,&quot;This Account is Inactive&quot;)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns either the Status if the account is a Prospect of the Account Status if the account is a Customer</inlineHelpText>
    <label>Acct Status</label>
    <type>Text</type>
</CustomField>