force-app/main/default/objects/Account/fields/AcctNameNumber__c.field-meta.xml
<CustomField>
    <fullName>AcctNameNumber__c</fullName>
    <formula>Name&amp;&quot; (&quot;&amp;zpl__CustomerId__c&amp;&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AcctNameNumber</label>
    <type>Text</type>
</CustomField>