force-app/main/default/objects/Account/fields/Acknowledgement_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Preferences__c</fullName>
    <description>CUSTOMER SERVICE SPECIFIC</description>
    <label>Acknowledgement Preferences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>