force-app/main/default/objects/Account/fields/Actions_in_Portal__c.field-meta.xml
<CustomField>
    <fullName>Actions_in_Portal__c</fullName>
    <label>Actions in Portal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pulling PO&apos;s</fullName>
            </value>
            <value>
                <fullName>Creating ASN&apos;s</fullName>
            </value>
            <value>
                <fullName>Updating Pricing</fullName>
            </value>
            <value>
                <fullName>Updating ETA&apos;s</fullName>
            </value>
            <value>
                <fullName>Updating Shipment Confirmations</fullName>
            </value>
            <value>
                <fullName>Portal Billed Only Customer</fullName>
            </value>
            <value>
                <fullName>Other - Please list in Portal Notes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>