force-app/main/default/objects/Account/fields/ActivePricingContract__c.field-meta.xml
<CustomField>
    <fullName>ActivePricingContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActivePricingContract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Active Pricing Contracts</relationshipLabel>
    <relationshipName>AccountToPricingContract</relationshipName>
    <type>Lookup</type>
</CustomField>