force-app/main/default/objects/Account/fields/AD_Output_Devices__c.field-meta.xml
<CustomField>
    <fullName>AD_Output_Devices__c</fullName>
    <label>AD Output Device(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>11”x17”</fullName>
            </value>
            <value>
                <fullName>12”x18”</fullName>
            </value>
            <value>
                <fullName>Canon</fullName>
            </value>
            <value>
                <fullName>Canon iPF5100</fullName>
            </value>
            <value>
                <fullName>Canon iPF6300S</fullName>
            </value>
            <value>
                <fullName>Canon iPF6400</fullName>
            </value>
            <value>
                <fullName>Canon iPF6450</fullName>
            </value>
            <value>
                <fullName>Canon iPF650</fullName>
            </value>
            <value>
                <fullName>Canon iPF655</fullName>
            </value>
            <value>
                <fullName>Canon iPF760</fullName>
            </value>
            <value>
                <fullName>Canon iPF765</fullName>
            </value>
            <value>
                <fullName>Canon iPF815</fullName>
            </value>
            <value>
                <fullName>Canon iPF825</fullName>
            </value>
            <value>
                <fullName>Canon iPF8300S</fullName>
            </value>
            <value>
                <fullName>Canon iPF8400</fullName>
            </value>
            <value>
                <fullName>Canon iPF9400</fullName>
            </value>
            <value>
                <fullName>Canon iPF9400S</fullName>
            </value>
            <value>
                <fullName>Epson 11880</fullName>
            </value>
            <value>
                <fullName>Epson 3880</fullName>
            </value>
            <value>
                <fullName>Epson 4900</fullName>
            </value>
            <value>
                <fullName>Epson 7890</fullName>
            </value>
            <value>
                <fullName>Epson 7900</fullName>
            </value>
            <value>
                <fullName>Epson 9890</fullName>
            </value>
            <value>
                <fullName>Epson 9900</fullName>
            </value>
            <value>
                <fullName>Epson GS 6000</fullName>
            </value>
            <value>
                <fullName>Epson S30670</fullName>
            </value>
            <value>
                <fullName>Epson S50670</fullName>
            </value>
            <value>
                <fullName>Epson S70670</fullName>
            </value>
            <value>
                <fullName>Epson T3000</fullName>
            </value>
            <value>
                <fullName>Epson T5000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>