force-app/main/default/objects/Account/fields/Add_Freight_If_LTL__c.field-meta.xml
<CustomField>
    <fullName>Add_Freight_If_LTL__c</fullName>
    <description>Nov 2016 - Data fed in from data warehouse integration.</description>
    <label>Add Freight If LTL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>