force-app/main/default/objects/Account/fields/Aging_0_and_Below__c.field-meta.xml
<CustomField>
    <fullName>Aging_0_and_Below__c</fullName>
    <description>0 &amp; Below days</description>
    <label>Aging 0 and Below</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>