force-app/main/default/objects/Account/fields/Aging_121_thru_180__c.field-meta.xml
<CustomField>
    <fullName>Aging_121_thru_180__c</fullName>
    <label>Aging 121 thru 180</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>