force-app/main/default/objects/Account/fields/Aging_15_thru_30__c.field-meta.xml
<CustomField>
    <fullName>Aging_15_thru_30__c</fullName>
    <description>16 - 30 days</description>
    <label>Aging 16 thru 30</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>