force-app/main/default/objects/Account/fields/Aging_181_thru_365__c.field-meta.xml
<CustomField>
    <fullName>Aging_181_thru_365__c</fullName>
    <label>Aging 181 thru 365</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>