force-app/main/default/objects/Account/fields/Aging_366_and_Above__c.field-meta.xml
<CustomField>
    <fullName>Aging_366_and_Above__c</fullName>
    <label>Aging 366 and Above</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>