force-app/main/default/objects/Account/fields/All_Parent_and_Child_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>All_Parent_and_Child_Opportunities__c</fullName>
    <formula>HYPERLINK( 

/* If they&apos;re in Lightning */ 
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;, 

/* Use Lightning syntax, optimized to avoid full page reload */ 
&quot;#/sObject/00O70000002vc4sEAA/view?fv0=&quot;, 

/* Otherwise use Classic syntax */ 
&quot;/00O70000002vc4sEAA?pv0=&quot;) 

/* Append the Parent Name */ 
&amp; Name, 

/* Specify the link text */ 
&quot;All Parent and Child Opportunities&quot;, 

/* Keep it in the same browser tab to avoid full page reload */ 
&quot;_self&quot; 
)</formula>
    <label>All Parent and Child Opportunities</label>
    <type>Text</type>
</CustomField>