force-app/main/default/objects/Account/fields/ANI_Primary__c.field-meta.xml
<CustomField>
    <fullName>ANI_Primary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>10/23/17 - For ANI Phone call Routing in Cisco, not fed from Data Stage/Data Warehouse</description>
    <label>ANI Primary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ANIPrimaryAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>