force-app/main/default/objects/Account/fields/ANI_Secondary__c.field-meta.xml
<CustomField>
    <fullName>ANI_Secondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>10/23/17 - For ANI Phone call Routing in Cisco, not fed from Data Stage/Data Warehouse</description>
    <label>ANI Secondary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ANISecondaryAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>