force-app/main/default/objects/Account/fields/ANI_Tertiary__c.field-meta.xml
<CustomField>
    <fullName>ANI_Tertiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>10/24/17 - For ANI Phone call Routing in Cisco, not fed from Data Stage/Data Warehouse</description>
    <label>ANI Tertiary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ANITertiaryAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>