force-app/main/default/objects/Account/fields/Are_Terms_considered_for_Award__c.field-meta.xml
<CustomField>
    <fullName>Are_Terms_considered_for_Award__c</fullName>
    <label>Are Terms considered for Award?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>