force-app/main/default/objects/Account/fields/Avg_Prob_of_All_Open_Opps__c.field-meta.xml
<CustomField>
    <fullName>Avg_Prob_of_All_Open_Opps__c</fullName>
    <formula>(Sum_Prob_of_Open_Opps__c / Count_of_Open_Opps__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A value of #ERROR is a result of the formula dividing by 0 (a result of  there being no open opportunities).</inlineHelpText>
    <label>Avg Prob of Open Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>