force-app/main/default/objects/Account/fields/Back_Orders__c.field-meta.xml
<CustomField>
    <fullName>Back_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nov 2016 - Data fed in from data warehouse integration.</description>
    <label>Allows Backorders</label>
    <type>Checkbox</type>
</CustomField>