force-app/main/default/objects/Account/fields/Bid_Bond__c.field-meta.xml
<CustomField>
    <fullName>Bid_Bond__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bid Bond</label>
    <type>Checkbox</type>
</CustomField>