force-app/main/default/objects/Account/fields/Bill_To_Link__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Link__c</fullName>
    <formula>&apos;https://www.tfaforms.com/4909230?acctid=&apos;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Link</label>
    <type>Text</type>
</CustomField>