force-app/main/default/objects/Account/fields/Bill_To_Number_to_Merge_With__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Number_to_Merge_With__c</fullName>
    <inlineHelpText>Enter the Customer&apos;s Bill To number in this field.  The Prospect will be merged with the Customer that has this Bill To number.</inlineHelpText>
    <label>Bill To Number to Merge With</label>
    <length>20</length>
    <type>Text</type>
</CustomField>