force-app/main/default/objects/Account/fields/Bill_To_Rep_Cd__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Rep_Cd__c</fullName>
    <label>Bill To Rep Cd</label>
    <length>40</length>
    <type>Text</type>
</CustomField>