force-app/main/default/objects/Account/fields/Billing_Order_Portal__c.field-meta.xml
<CustomField>
    <fullName>Billing_Order_Portal__c</fullName>
    <description>Customer Service specific to identify Accounts that use Ariba or some other billing/order solution</description>
    <label>Billing/Order Portal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>