force-app/main/default/objects/Account/fields/Billing_Order_Portal_if_Yes_Describe__c.field-meta.xml
<CustomField>
    <fullName>Billing_Order_Portal_if_Yes_Describe__c</fullName>
    <description>Customer Service specific</description>
    <label>Billing/Order Portal, if Yes - Describe</label>
    <length>200</length>
    <type>Text</type>
</CustomField>