force-app/main/default/objects/Account/fields/BillingCityInitial__c.field-meta.xml
<CustomField>
    <fullName>BillingCityInitial__c</fullName>
    <description>Initial submission, populated via workflow. To hold in the event the user realizes they don&apos;t want the DNB information</description>
    <label>Billing City Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>