force-app/main/default/objects/Account/fields/BillingStateInitial__c.field-meta.xml
<CustomField>
    <fullName>BillingStateInitial__c</fullName>
    <description>For the DNB API call</description>
    <inlineHelpText>Zip code for this account?</inlineHelpText>
    <label>Billing State Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>