force-app/main/default/objects/Account/fields/BillingStreetInitial__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetInitial__c</fullName>
    <description>Initial submission, populated via workflow. To hold in the event the user realizes they don&apos;t want the DNB information</description>
    <label>Billing Street Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>