force-app/main/default/objects/Account/fields/BillTo_Acct_Core__c.field-meta.xml
<CustomField>
    <fullName>BillTo_Acct_Core__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BillTo Acct Core</label>
    <type>Checkbox</type>
</CustomField>