force-app/main/default/objects/Account/fields/BillTo_Balance__c.field-meta.xml
<CustomField>
    <fullName>BillTo_Balance__c</fullName>
    <label>BillTo Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>