force-app/main/default/objects/Account/fields/BillTo_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>BillTo_Past_Due__c</fullName>
    <label>BillTo Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>