force-app/main/default/objects/Account/fields/BillTo_Past_DueDELETE__c.field-meta.xml
<CustomField>
    <fullName>BillTo_Past_DueDELETE__c</fullName>
    <formula>Aging_1_thru_15__c  +  Aging_15_thru_30__c  +  Aging_31_thru_45__c +  Aging_46_thru_60__c + Aging_61_thru_90__c + Aging_91_thru_120__c + Aging_121_thru_180__c + Aging_181_thru_365__c + Aging_366_and_Above__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillTo Past DueDELETE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>