force-app/main/default/objects/Account/fields/Blanket_PO__c.field-meta.xml
<CustomField>
    <fullName>Blanket_PO__c</fullName>
    <description>CUSTOMER SERVICE SPECIFIC</description>
    <label>Blanket PO#</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>