force-app/main/default/objects/Account/fields/Blanket_PO_if_Yes_Describe__c.field-meta.xml
<CustomField>
    <fullName>Blanket_PO_if_Yes_Describe__c</fullName>
    <description>CUSTOMER SERVICE SPECIFIC</description>
    <label>Blanket PO#, if Yes - Describe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>