force-app/main/default/objects/Account/fields/BOL_POD_Notes__c.field-meta.xml
<CustomField>
    <fullName>BOL_POD_Notes__c</fullName>
    <label>BOL/POD Notes</label>
    <type>TextArea</type>
</CustomField>