force-app/main/default/objects/Account/fields/Brights_Notes__c.field-meta.xml
<CustomField>
    <fullName>Brights_Notes__c</fullName>
    <label>Brights Notes</label>
    <type>TextArea</type>
</CustomField>