force-app/main/default/objects/Account/fields/Brights_Preference__c.field-meta.xml
<CustomField>
    <fullName>Brights_Preference__c</fullName>
    <label>Brights Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>