force-app/main/default/objects/Account/fields/Business_Segment_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment_Code__c</fullName>
    <description>Will be fed in from Enable on Parent Accounts</description>
    <label>Business Segment Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>