force-app/main/default/objects/Account/fields/Buying_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Buying_Pattern__c</fullName>
    <label>Buying Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Occasionally</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>