force-app/main/default/objects/Account/fields/C360_Count_of_Legacy_U_Accounts__c.field-meta.xml
<CustomField>
    <fullName>C360_Count_of_Legacy_U_Accounts__c</fullName>
    <description>Returns 1 if the account&apos;s Legacy System Cd is not blank nor &quot;X&quot; (case sensitive). Necessary for Customer 360 Object.</description>
    <formula>IF(AND(
  Legacy_System_Cd__c &lt;&gt; &quot;X&quot;
 ,  RecordType.DeveloperName = &quot;Customer&quot;) ,
1,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Legacy U Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>